--- a/credit-risk-analysis.ipynb
+++ b/credit-risk-analysis.ipynb
@@ -4432,7 +4432,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1252bba10>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x125941090>"
       ]
      },
      "execution_count": 29,
@@ -4584,7 +4584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -4796,7 +4796,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4807,7 +4807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "metadata": {
     "scrolled": false
    },
@@ -4818,7 +4818,7 @@
        "(0.8819769159731726, 0.0)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4831,7 +4831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -5217,7 +5217,7 @@
        "[334 rows x 21 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5228,7 +5228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -5614,7 +5614,7 @@
        "[275 rows x 21 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5625,7 +5625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -6011,7 +6011,7 @@
        "[235 rows x 21 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6022,7 +6022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6031,7 +6031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -6243,7 +6243,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6254,7 +6254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -6263,7 +6263,7 @@
        "(1319, 21)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6274,7 +6274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 40,
    "metadata": {
     "scrolled": true
    },
@@ -6298,7 +6298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -6320,7 +6320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -6532,7 +6532,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6543,7 +6543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -6585,7 +6585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -6605,13 +6605,55 @@
        "Name: TempAvgF, Length: 225, dtype: int64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df2.TempAvgF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 225 entries, 91 to 1303\n",
+      "Data columns (total 21 columns):\n",
+      "Date                          225 non-null object\n",
+      "TempHighF                     225 non-null int64\n",
+      "TempAvgF                      225 non-null int64\n",
+      "TempLowF                      225 non-null int64\n",
+      "DewPointHighF                 225 non-null object\n",
+      "DewPointAvgF                  225 non-null object\n",
+      "DewPointLowF                  225 non-null object\n",
+      "HumidityHighPercent           225 non-null object\n",
+      "HumidityAvgPercent            225 non-null object\n",
+      "HumidityLowPercent            225 non-null object\n",
+      "SeaLevelPressureHighInches    225 non-null object\n",
+      "SeaLevelPressureAvgInches     225 non-null object\n",
+      "SeaLevelPressureLowInches     225 non-null object\n",
+      "VisibilityHighMiles           225 non-null object\n",
+      "VisibilityAvgMiles            225 non-null object\n",
+      "VisibilityLowMiles            225 non-null object\n",
+      "WindHighMPH                   225 non-null object\n",
+      "WindAvgMPH                    225 non-null object\n",
+      "WindGustMPH                   225 non-null object\n",
+      "PrecipitationSumInches        225 non-null object\n",
+      "Events                        225 non-null object\n",
+      "dtypes: int64(3), object(18)\n",
+      "memory usage: 38.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df2.info()"
    ]
   },
   {
