--- a/credit-risk-analysis.ipynb
+++ b/credit-risk-analysis.ipynb
@@ -6658,6 +6658,461 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>TempHighF</th>\n",
+       "      <th>TempAvgF</th>\n",
+       "      <th>TempLowF</th>\n",
+       "      <th>DewPointHighF</th>\n",
+       "      <th>DewPointAvgF</th>\n",
+       "      <th>DewPointLowF</th>\n",
+       "      <th>HumidityHighPercent</th>\n",
+       "      <th>HumidityAvgPercent</th>\n",
+       "      <th>HumidityLowPercent</th>\n",
+       "      <th>...</th>\n",
+       "      <th>SeaLevelPressureAvgInches</th>\n",
+       "      <th>SeaLevelPressureLowInches</th>\n",
+       "      <th>VisibilityHighMiles</th>\n",
+       "      <th>VisibilityAvgMiles</th>\n",
+       "      <th>VisibilityLowMiles</th>\n",
+       "      <th>WindHighMPH</th>\n",
+       "      <th>WindAvgMPH</th>\n",
+       "      <th>WindGustMPH</th>\n",
+       "      <th>PrecipitationSumInches</th>\n",
+       "      <th>Events</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1262</th>\n",
+       "      <td>2017-06-05</td>\n",
+       "      <td>90</td>\n",
+       "      <td>78</td>\n",
+       "      <td>66</td>\n",
+       "      <td>70</td>\n",
+       "      <td>68</td>\n",
+       "      <td>65</td>\n",
+       "      <td>100</td>\n",
+       "      <td>72</td>\n",
+       "      <td>44</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.74</td>\n",
+       "      <td>29.68</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>3</td>\n",
+       "      <td>41</td>\n",
+       "      <td>1.39</td>\n",
+       "      <td>Fog , Rain , Thunderstorm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1283</th>\n",
+       "      <td>2017-06-26</td>\n",
+       "      <td>91</td>\n",
+       "      <td>82</td>\n",
+       "      <td>72</td>\n",
+       "      <td>74</td>\n",
+       "      <td>72</td>\n",
+       "      <td>67</td>\n",
+       "      <td>100</td>\n",
+       "      <td>74</td>\n",
+       "      <td>47</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.08</td>\n",
+       "      <td>29.95</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1.07</td>\n",
+       "      <td>Rain , Thunderstorm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1284</th>\n",
+       "      <td>2017-06-27</td>\n",
+       "      <td>91</td>\n",
+       "      <td>81</td>\n",
+       "      <td>71</td>\n",
+       "      <td>74</td>\n",
+       "      <td>72</td>\n",
+       "      <td>67</td>\n",
+       "      <td>100</td>\n",
+       "      <td>75</td>\n",
+       "      <td>50</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>29.9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>3</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>Rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1302</th>\n",
+       "      <td>2017-07-15</td>\n",
+       "      <td>103</td>\n",
+       "      <td>87</td>\n",
+       "      <td>71</td>\n",
+       "      <td>73</td>\n",
+       "      <td>70</td>\n",
+       "      <td>63</td>\n",
+       "      <td>100</td>\n",
+       "      <td>65</td>\n",
+       "      <td>29</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.01</td>\n",
+       "      <td>29.94</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "      <td>23</td>\n",
+       "      <td>3</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>Rain , Thunderstorm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1303</th>\n",
+       "      <td>2017-07-16</td>\n",
+       "      <td>99</td>\n",
+       "      <td>84</td>\n",
+       "      <td>68</td>\n",
+       "      <td>71</td>\n",
+       "      <td>69</td>\n",
+       "      <td>65</td>\n",
+       "      <td>100</td>\n",
+       "      <td>67</td>\n",
+       "      <td>33</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.93</td>\n",
+       "      <td>29.84</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Date  TempHighF  TempAvgF  TempLowF DewPointHighF DewPointAvgF  \\\n",
+       "1262  2017-06-05         90        78        66            70           68   \n",
+       "1283  2017-06-26         91        82        72            74           72   \n",
+       "1284  2017-06-27         91        81        71            74           72   \n",
+       "1302  2017-07-15        103        87        71            73           70   \n",
+       "1303  2017-07-16         99        84        68            71           69   \n",
+       "\n",
+       "     DewPointLowF HumidityHighPercent HumidityAvgPercent HumidityLowPercent  \\\n",
+       "1262           65                 100                 72                 44   \n",
+       "1283           67                 100                 74                 47   \n",
+       "1284           67                 100                 75                 50   \n",
+       "1302           63                 100                 65                 29   \n",
+       "1303           65                 100                 67                 33   \n",
+       "\n",
+       "      ... SeaLevelPressureAvgInches SeaLevelPressureLowInches  \\\n",
+       "1262  ...                     29.74                     29.68   \n",
+       "1283  ...                     30.08                     29.95   \n",
+       "1284  ...                        30                      29.9   \n",
+       "1302  ...                     30.01                     29.94   \n",
+       "1303  ...                     29.93                     29.84   \n",
+       "\n",
+       "     VisibilityHighMiles VisibilityAvgMiles VisibilityLowMiles WindHighMPH  \\\n",
+       "1262                  10                  9                  0          25   \n",
+       "1283                  10                  8                  1          15   \n",
+       "1284                  10                  7                  2          20   \n",
+       "1302                  10                  9                  2          23   \n",
+       "1303                  10                  9                  6          12   \n",
+       "\n",
+       "     WindAvgMPH WindGustMPH PrecipitationSumInches                     Events  \n",
+       "1262          3          41                   1.39  Fog , Rain , Thunderstorm  \n",
+       "1283          2          22                   1.07        Rain , Thunderstorm  \n",
+       "1284          3          30                   0.01                       Rain  \n",
+       "1302          3          35                   0.16        Rain , Thunderstorm  \n",
+       "1303          3          24                      0                             \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df3 = df2.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>TempHighF</th>\n",
+       "      <th>TempAvgF</th>\n",
+       "      <th>TempLowF</th>\n",
+       "      <th>DewPointHighF</th>\n",
+       "      <th>DewPointAvgF</th>\n",
+       "      <th>DewPointLowF</th>\n",
+       "      <th>HumidityHighPercent</th>\n",
+       "      <th>HumidityAvgPercent</th>\n",
+       "      <th>HumidityLowPercent</th>\n",
+       "      <th>...</th>\n",
+       "      <th>SeaLevelPressureAvgInches</th>\n",
+       "      <th>SeaLevelPressureLowInches</th>\n",
+       "      <th>VisibilityHighMiles</th>\n",
+       "      <th>VisibilityAvgMiles</th>\n",
+       "      <th>VisibilityLowMiles</th>\n",
+       "      <th>WindHighMPH</th>\n",
+       "      <th>WindAvgMPH</th>\n",
+       "      <th>WindGustMPH</th>\n",
+       "      <th>PrecipitationSumInches</th>\n",
+       "      <th>Events</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1262</th>\n",
+       "      <td>2017-06-05</td>\n",
+       "      <td>90</td>\n",
+       "      <td>78</td>\n",
+       "      <td>66</td>\n",
+       "      <td>70</td>\n",
+       "      <td>68</td>\n",
+       "      <td>65</td>\n",
+       "      <td>100</td>\n",
+       "      <td>72</td>\n",
+       "      <td>44</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.74</td>\n",
+       "      <td>29.68</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>3</td>\n",
+       "      <td>41</td>\n",
+       "      <td>1.39</td>\n",
+       "      <td>Fog , Rain , Thunderstorm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1283</th>\n",
+       "      <td>2017-06-26</td>\n",
+       "      <td>91</td>\n",
+       "      <td>82</td>\n",
+       "      <td>72</td>\n",
+       "      <td>74</td>\n",
+       "      <td>72</td>\n",
+       "      <td>67</td>\n",
+       "      <td>100</td>\n",
+       "      <td>74</td>\n",
+       "      <td>47</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.08</td>\n",
+       "      <td>29.95</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1.07</td>\n",
+       "      <td>Rain , Thunderstorm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1284</th>\n",
+       "      <td>2017-06-27</td>\n",
+       "      <td>91</td>\n",
+       "      <td>81</td>\n",
+       "      <td>71</td>\n",
+       "      <td>74</td>\n",
+       "      <td>72</td>\n",
+       "      <td>67</td>\n",
+       "      <td>100</td>\n",
+       "      <td>75</td>\n",
+       "      <td>50</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>29.9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>3</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>Rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1302</th>\n",
+       "      <td>2017-07-15</td>\n",
+       "      <td>103</td>\n",
+       "      <td>87</td>\n",
+       "      <td>71</td>\n",
+       "      <td>73</td>\n",
+       "      <td>70</td>\n",
+       "      <td>63</td>\n",
+       "      <td>100</td>\n",
+       "      <td>65</td>\n",
+       "      <td>29</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.01</td>\n",
+       "      <td>29.94</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "      <td>23</td>\n",
+       "      <td>3</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>Rain , Thunderstorm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1303</th>\n",
+       "      <td>2017-07-16</td>\n",
+       "      <td>99</td>\n",
+       "      <td>84</td>\n",
+       "      <td>68</td>\n",
+       "      <td>71</td>\n",
+       "      <td>69</td>\n",
+       "      <td>65</td>\n",
+       "      <td>100</td>\n",
+       "      <td>67</td>\n",
+       "      <td>33</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.93</td>\n",
+       "      <td>29.84</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Date  TempHighF  TempAvgF  TempLowF DewPointHighF DewPointAvgF  \\\n",
+       "1262  2017-06-05         90        78        66            70           68   \n",
+       "1283  2017-06-26         91        82        72            74           72   \n",
+       "1284  2017-06-27         91        81        71            74           72   \n",
+       "1302  2017-07-15        103        87        71            73           70   \n",
+       "1303  2017-07-16         99        84        68            71           69   \n",
+       "\n",
+       "     DewPointLowF HumidityHighPercent HumidityAvgPercent HumidityLowPercent  \\\n",
+       "1262           65                 100                 72                 44   \n",
+       "1283           67                 100                 74                 47   \n",
+       "1284           67                 100                 75                 50   \n",
+       "1302           63                 100                 65                 29   \n",
+       "1303           65                 100                 67                 33   \n",
+       "\n",
+       "      ... SeaLevelPressureAvgInches SeaLevelPressureLowInches  \\\n",
+       "1262  ...                     29.74                     29.68   \n",
+       "1283  ...                     30.08                     29.95   \n",
+       "1284  ...                        30                      29.9   \n",
+       "1302  ...                     30.01                     29.94   \n",
+       "1303  ...                     29.93                     29.84   \n",
+       "\n",
+       "     VisibilityHighMiles VisibilityAvgMiles VisibilityLowMiles WindHighMPH  \\\n",
+       "1262                  10                  9                  0          25   \n",
+       "1283                  10                  8                  1          15   \n",
+       "1284                  10                  7                  2          20   \n",
+       "1302                  10                  9                  2          23   \n",
+       "1303                  10                  9                  6          12   \n",
+       "\n",
+       "     WindAvgMPH WindGustMPH PrecipitationSumInches                     Events  \n",
+       "1262          3          41                   1.39  Fog , Rain , Thunderstorm  \n",
+       "1283          2          22                   1.07        Rain , Thunderstorm  \n",
+       "1284          3          30                   0.01                       Rain  \n",
+       "1302          3          35                   0.16        Rain , Thunderstorm  \n",
+       "1303          3          24                      0                             \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
