--- a/credit-risk-analysis.ipynb
+++ b/credit-risk-analysis.ipynb
@@ -7133,6 +7133,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 5 entries, 1262 to 1303\n",
+      "Data columns (total 21 columns):\n",
+      "Date                          5 non-null object\n",
+      "TempHighF                     5 non-null int64\n",
+      "TempAvgF                      5 non-null int64\n",
+      "TempLowF                      5 non-null int64\n",
+      "DewPointHighF                 5 non-null object\n",
+      "DewPointAvgF                  5 non-null object\n",
+      "DewPointLowF                  5 non-null object\n",
+      "HumidityHighPercent           5 non-null object\n",
+      "HumidityAvgPercent            5 non-null object\n",
+      "HumidityLowPercent            5 non-null object\n",
+      "SeaLevelPressureHighInches    5 non-null object\n",
+      "SeaLevelPressureAvgInches     5 non-null object\n",
+      "SeaLevelPressureLowInches     5 non-null object\n",
+      "VisibilityHighMiles           5 non-null object\n",
+      "VisibilityAvgMiles            5 non-null object\n",
+      "VisibilityLowMiles            5 non-null object\n",
+      "WindHighMPH                   5 non-null object\n",
+      "WindAvgMPH                    5 non-null object\n",
+      "WindGustMPH                   5 non-null object\n",
+      "PrecipitationSumInches        5 non-null object\n",
+      "Events                        5 non-null object\n",
+      "dtypes: int64(3), object(18)\n",
+      "memory usage: 880.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "df3.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
